# Musicguessr

./: Caddyfile  README.md  package-lock.json
api/: Cargo.toml
api/src/: checks.rs  error.rs  main.rs  models.rs  paths.rs  socket.rs  state.rs
api/src/checks/: song_check.rs
api/src/paths/: game.rs  health.rs
api/src/socket/: game.rs  listener.rs  messages.rs  room_join.rs  rooms.rs  song.rs
musicguessr_web/: package-lock.json  package.json
musicguessr_web/app/: layout.tsx  page.tsx  styles.ts
web/: next.config.ts  package-lock.json  package.json  panda.config.ts  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx  styles.ts
web/app/(main)/: page.tsx  styles.ts
web/app/game/: layout.tsx  styles.ts
web/lib/Modals/Confirm/: index.tsx  styles.ts
web/lib/Modals/SongSelector/: index.tsx  styles.ts  tmp.ts
web/lib/ModalsManager/: index.tsx  modals.ts  types.ts
web/lib/atoms/: game.ts  nowPlaying.ts  song.ts  songSelector.ts  user.ts
web/lib/competition/GuessingPart/: index.tsx  styles.ts
web/lib/competition/RevealPart/: index.tsx  styles.ts
web/lib/components/Button/: index.tsx  styles.ts
web/lib/components/GlowTile/: index.tsx  styles.ts
web/lib/components/ImageButton/: index.tsx  styles.ts
web/lib/components/Input/: index.tsx  styles.ts
web/lib/components/ModalBase/: index.tsx  styles.ts
web/lib/components/Spacer/: index.tsx  (+1 more)
web/lib/hooks/: useAudio.ts  useSocket.ts
web/lib/providers/: AudioProvider.tsx  GameProvider.tsx  Query.tsx  Socket.tsx  itunes.ts
web/lib/startpage/: styles.ts
web/types/: api.d.ts  itunes.d.ts  song.ts
(+38 files in other folders)
