[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
color-eyre = "0.6.4"
dotenvy = "0.15.7"
mongodb = "3.2.3"
rand = "0.9.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "http2",
    "charset",
    "json",
    "multipart",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
socketioxide = { version = "0.16.2", features = ["state", "tracing"] }
time = { version = "0.3.41", features = ["parsing", "serde"] }
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full", "tokio", "tracing"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }
